Redesigned and revamped website

--- a/layouts/basic/single.html
+++ b/layouts/basic/single.html
@@ -1,6 +1,5 @@
 {{ partial "meta.html" . }}
-<body class="default">
+<body class="basic">
 {{ partial "nav.html" . }}
-<div class="header-cover"></div>
 {{ .Content }}
 {{ partial "footer.html" . }}
