--- a/layouts/light/single.html
+++ b/layouts/light/single.html
@@ -1,5 +1,5 @@
 {{ partial "meta.html" . }}
-<body class="index">
-{{ partial "nav.html" . }}
+<body class="default">
+{{ partial "nav-light.html" . }}
 {{ .Content }}
 {{ partial "footer.html" . }}
