--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,30 +1,78 @@
-<footer class="footer center">
-  <p>
-    Copyright 2017 Chorale, Mantas Vilčinskas<br>
+<footer class="footer-promo">
+  <div class="container center">
+    <h1 class="h1"><b>It’s made for you, by you.</b></h1>
+    <div class="break--half"></div>
+    <a href="/pricing" class="btn btn--primary">Try Chorale for free</a>
+    <a href="/contact" class="btn btn--border">
+      Ask us a question
+    </a>
+  </div>
+</footer>
 
-    <a href="https://twitter.com/choraleapp">Twitter</a> &middot;
-    <a href="https://github.com/choraleapp">GitHub</a> &middot;
-    <a href="https://discord.io/choraleapp">Discord</a> &middot;
-    <a href="https://patreon.com/choraleapp">Patreon</a> &middot;
-    <a href="https://reddit.com/r/choraleapp">Reddit</a>
+<footer class="footer">
+  <div class="container">
+    <div class="footer__sponsors center">
+      <p class="h4 center">Thank you to our affiliates!</p>
 
-    <br>
-    <a href="/press">Press</a> &middot;
-    <a href="/privacy">Privacy</a> &middot;
-    <a href="/license">OSS License</a>
-  </p>
+      <a href="https://rabbitnode.com/?rel=choraleapp.com">
+        <img src="/sponsors/rbno.png" alt="RabbitNode" class="sponsor">
+      </a>
+
+      <a href="https://billing.spartanhost.net/aff.php?aff=568">
+        <img src="/sponsors/spartan.png" alt="Spartan Host" class="sponsor">
+      </a>
+    </div>
+    <div class="break"></div>
+
+  <div class="row center">
+    <figure class="col">
+      <h1 class="h4"><b>Group</b></h1>
+
+      <ul class="no-bullet">
+        <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">About</a></li>
+        <li class="h5"><a href="/brand">Brand</a></li>
+        <li class="h5"><a href="/contact">Contact</a></li>
+        <li class="h5"><a href="/contribute">Contribute</a></li>
+        <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">Transparency</a></li>
+        <li class="h5"><a href="/legal">Legal</a></li>
+      </ul>
+    </figure>
+
+    <figure class="col">
+      <h1 class="h4"><b>Product</b></h1>
+
+      <ul class="no-bullet">
+        <li class="h5"><a href="/pricing">Pricing</a></li>
+        <li class="h5"><a href="https://status.choraleapp.com">Status</a></li>
+        <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">Help</a></li>
+        <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">Download</a></li>
+        <li class="h5"><a href="/creators">Creators</a></li>
+        <li class="h5"><a href="#0" data-toggle="snackbar" data-content="This page is currently unavailable" data-timeout="3000">Developers</a></li>
+      </ul>
+    </figure>
+
+    <figure class="col">
+       <h1 class="h4"><b>Elsewhere</b></h1>
+
+       <ul class="no-bullet">
+         <li class="h5"><a href="https://discord.io/choraleapp">Discord</a></li>
+         <li class="h5"><a href="https://fb.me/choraleapp">Facebook</a></li>
+         <li class="h5"><a href="https://twitter.com/choraleapp">Twitter</a></li>
+         <li class="h5"><a href="https://github.com/choraleapp">GitHub</a></li>
+         <li class="h5"><a href="https://reddit.com/r/choraleapp">Reddit</a></li>
+         <li class="h5"><a href="https://patreon.com/choraleapp">Patreon</a></li>
+       </ul>
+     </figure>
+  </div>
+
+  <div class="break"></div>
+
+  <svg class="footer__logo" viewBox="0 0 96 96" style="enable-background:new 0 0 96 96;"><g><rect x="23.6" y="14.3" width="10.5" height="67.4"/><rect x="42.8" y="6.8" width="10.5" height="82.4"/><rect x="61.9" y="24.8" width="10.5" height="46.4"/><rect x="81.2" y="32.3" width="10.5" height="31.5"/><rect x="4.3" y="32.3" width="10.5" height="31.5"/></g></svg>
+  &nbsp; <div style="float: right; text-align: right"><b>&copy; 2017</b><br>All rights reserved</div>
 </footer>
 
 
-<script>window.$crisp=[];window.CRISP_WEBSITE_ID="1456a9bd-7292-4dee-b61d-5d9946f925b5";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+<script defer>window.$crisp=[];window.CRISP_WEBSITE_ID="1456a9bd-7292-4dee-b61d-5d9946f925b5";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 
-
-<style>
-html .crisp-client .crisp-1 .crisp-11,
-html .crisp-client .crisp-1 .crisp-12:before,
-html .crisp-client .crisp-1 .crisp-12:after {
-  background-color: #8728CC !important;
-}
-</style>
 <script src="/js/all.js"></script>
 </body></html>
