--- a/layouts/partials/nav-light.html
+++ b/layouts/partials/nav-light.html
@@ -1,4 +1,4 @@
-<nav class="nav-bar">
+<nav class="nav-bar nav-bar--light">
   <div class="container">
     <svg class="nav-bar__icon" viewBox="0 0 24 24">
       <path class="nav-bar__icon--open" d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" />
@@ -6,7 +6,7 @@
     </svg>
 
     <a href="/#">
-      <img src="/logo-black.png" class="nav-bar__logo">
+      <img src="/logo.png" class="nav-bar__logo">
     </a>
 
     <ul class="nav-bar__list">
