--- a/layouts/wrapped/single.html
+++ b/layouts/wrapped/single.html
@@ -1,6 +1,6 @@
 {{ partial "meta.html" . }}
 <body class="default">
-{{ partial "nav.html" . }}
+{{ partial "nav-light.html" . }}
 <div class="header-cover"></div>
 <section class="basic-section">
   <div class="container markdown-container">
