--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,22 +2,32 @@
 <body class="index">
 {{ partial "nav.html" . }}
 <!-- Content -->
-<main class="hero-greeting">
-  <div class="hero-greeting__container container">
-    <h1 class="h1"><b>Spotify, Google, and SoundCloud don’t listen to their users.
-       Try Chorale, you won’t go back.</b></h1>
-    <p>Chorale is a user-focused app for listening to your favorite stuff.
-       Chorale is made for everyone and with beautiful design, endless
-       customization options, and a powerful creator platform, you’ll wonder why
-       you ever lived without it. The app is currently in alpha testing, and you
-       can request access.</p>
+<main class="hero hero--light">
+  <div class="container">
+  <div class="row">
+  <!---->
+  <div class="col-half">
+    <h1 class="h1">
+      <b>Meet Chorale, your new favorite music app.
+         It’s made for everyone, by everyone.</b>
+    </h1>
+    <p>Spotify, Google, and SoundCloud don’t listen to you. But we do. Chorale
+       is the first-ever music streaming platform that caters to users and not greedy corporations.</p>
 
-       <div class="center">
-         <div class="break"></div>
-            <a href="/early-access" class="btn btn--primary">Request access</a>
-            <a href="/#explain" class="btn btn--border">I don’t believe you</a>
-          <p><small>we usually respond in a day or two</small></p>
-       </div>
+    <div class="break break--half"></div>
+    <a href="#explain" class="btn btn--primary">I want to know more</a>
+    <a href="/contribute" class="btn btn--border">Help us make the app</a>
+
+    <p><small>
+      <a href="https://dribbble.com/shots/2863164-Anya-Hindmarch">animation art by Magnus Magnusson</a></small></p>
+  </div>
+  <div class="col-half">
+    <img src="https://cdn.dribbble.com/users/285475/screenshots/2863164/anya-hindmarch2.gif"
+    style="height: 100%; width: 100%;">
+    <!-- <img src="http://i.imgur.com/IUuLTuc.gif" style="height:100%;width:100%"> -->
+  </div>
+  <!---->
+  </div>
   </div>
 </main>
 
@@ -119,6 +129,30 @@
         <td class="chorale"> {{ partial "check.html" . }}</td>
         <td><!-- SoundCl --> {{ partial "cross.html" . }}</td>
         <td><!-- Spotify --> {{ partial "check.html" . }}</td>
+        <td><!-- YouTube --> {{ partial "cross.html" . }}</td>
+        <td><!-- Play Mu --> {{ partial "cross.html" . }}</td>
+      </tr>
+      <tr>
+        <td class="feature"><span class="bold">View previous<br>queue tracks</span></td>
+        <td class="chorale"> {{ partial "check.html" . }}</td>
+        <td><!-- SoundCl --> {{ partial "check.html" . }}</td>
+        <td><!-- Spotify --> {{ partial "cross.html" . }}</td>
+        <td><!-- YouTube --> {{ partial "check.html" . }}</td>
+        <td><!-- Play Mu --> {{ partial "check.html" . }}</td>
+      </tr>
+      <tr>
+        <td class="feature"><span class="bold">Ergonomic mobile apps<br>for use with 1 hand</span></td>
+        <td class="chorale"> {{ partial "check.html" . }}</td>
+        <td><!-- SoundCl --> {{ partial "check.html" . }}</td>
+        <td><!-- Spotify --> {{ partial "cross.html" . }}</td>
+        <td><!-- YouTube --> {{ partial "cross.html" . }}</td>
+        <td><!-- Play Mu --> {{ partial "cross.html" . }}</td>
+      </tr>
+      <tr>
+        <td class="feature"><span class="bold">Screen real-estate<br>preservant apps</span></td>
+        <td class="chorale"> {{ partial "check.html" . }}</td>
+        <td><!-- SoundCl --> {{ partial "cross.html" . }}</td>
+        <td><!-- Spotify --> {{ partial "cross.html" . }}</td>
         <td><!-- YouTube --> {{ partial "cross.html" . }}</td>
         <td><!-- Play Mu --> {{ partial "cross.html" . }}</td>
       </tr>
