--- a/layouts/partials/meta.html
+++ b/layouts/partials/meta.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta name="generator" content="Hugo {{ .Hugo.Version }}">
     <!-- CSS -->
-    <link href="https://fonts.googleapis.com/css?family=Rubik:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik:400,400i,500,700" rel="stylesheet">
     <link href="/css/main.css" rel="stylesheet">
     <!-- Favicons -->
     <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
